[package]
name = "payengine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
csv = "1.1"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.11", features = ["full"]}
tokio-stream = "0.1"
parking_lot = "0.11"
rust_decimal = "1.15"
rust_decimal_macros = "1.15"
